--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --main-color: #AB0E12;
   --ash-color: #7D7C7C;
   --light-color: #FCFCFC;
+  --dark-blue: #071529;
   --primary-color: #4e4343;
   --secondary-color: #e86257;
   --white-color: #ffffff;
