--- a/src/components/home/Contact.css
+++ b/src/components/home/Contact.css
@@ -1,7 +1,5 @@
 .contact-section {
-  background: var(--dark-blue);
-  padding: 4rem 0;
-  color: var(--white-color);
+  padding: 1rem 0 4rem 0;
 }
 
 .contact-about-left {
@@ -10,15 +8,20 @@
   justify-content: center;
 }
 
+.contact-about-left h5 {
+  color: var(--main-color);
+}
+
 .contact-about-left h3 {
-  word-spacing: 0.3rem;
+  word-spacing: 0.2rem;
   line-height: 2.5rem;
   width: 70%;
 }
 
 .contact-about-left p {
-  width: 80%;
-  font-size: 14px;
+  width: 90%;
+  font-size: 15px;
+  color: var(--ash-color);
 }
 
 form {
