--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -88,66 +88,165 @@
   color: var(--ash-color);
 }
 
+.service-scrolls-section {
+  position: relative;
+  height: 100vh;
+}
+
+.items-wrapper {
+  height: 80vh;
+  width: 80%;
+  overflow-y: scroll !important;
+  position: absolute;
+  scroll-behavior: smooth;
+}
+
+.items-wrapper::-webkit-scrollbar {
+  height: 4px;
+}
+
+.items-wrapper::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 5px;
+}
+
+.items-wrapper::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
 .service-items {
   display: flex;
-  justify-content: space-around;
-  margin: 4rem 0 0 0;
+  justify-content: space-between;
+  width: 100%;
 }
 
-.service-item {
-  text-align: center;
-  margin: 0 1.7rem;
+.service-card {
+  display: flex;
+  position: relative;
+  align-items: center;
+  background: var(--card-bg);
+  color: white;
+  width: 385px;
+  padding: 2rem 2rem;
+  border-radius: 4px;
+  margin: 1rem 0;
+  transition: var(--transition);
+  cursor: pointer;
 }
 
-.service-item h5 {
-  padding-top: 3rem;
+.service-card.act {
+  background: var(--main-color);
 }
 
-.service-item p {
-  font-size: 16px;
-  color: var(--ash-color);
+.service-card p {
+  width: 80%;
+  font-size: 21px;
+  padding: 0 0 0 2rem;
+}
+
+.icon-direction {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  width: 30px;
+}
+
+.service-card:hover .icon-direction {
+  transform: rotate(-90deg);
+  transition: var(--transition);
+}
+
+.service-card:hover {
+  transition: var(--transition);
+  background: var(--main-color);
+}
+
+.service-cd-desc {
+  padding: 2rem;
+}
+
+.service-cd-desc p {
+  padding: 1rem 0;
+}
+
+.service-cd-desc button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  border-radius: 0.2rem;
+  color: var(--main-color);
+  padding: 0.5rem 0.5rem 0.5rem 0;
+  margin: 1rem 0 0 0;
+}
+
+.service-ls {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.service-cd {
+  width: 160px;
+}
+
+.service-cd p {
+  color: var(--black-color);
+  font-size: 15px;
+  font-weight: 400;
+  width: 85%;
 }
 
 .about-home-section {
-  padding: 5rem 0;
+  padding: 1rem 0 12rem 0;
 }
 
-.about-home-left {
+.about-home-right {
   position: relative;
 }
 
-.about-img-bg {
+.about-img-top-bg {
   position: absolute;
-  background: var(--main-color);
+  border: 2px solid var(--main-color);
   width: 350px;
-  height: 350px;
+  height: 300px;
   top: 0;
-  left: 0;
+  left: 5rem;
+  border-radius: .2rem;
+
 }
 
-.about-home-left img {
+.about-img-bottom-bg {
+  position: absolute;
+  border: 2px solid var(--main-color);
+  width: 350px;
+  height: 300px;
+  bottom: -7rem;
+  right: 3rem;
+  border-radius: .2rem;
+}
+
+.about-home-right img {
   position: absolute;
   width: 350px;
   top: 2.5rem;
-  left: 3rem;
+  left: 8rem;
 }
 
-.about-home-right h5 {
+.about-home-left h5 {
   color: var(--main-color);
 }
 
-.about-home-right h3 {
+.about-home-left h3 {
   font-size: 30px;
-  width: 70%;
+  width: 80%;
   word-spacing: 0.5rem;
 }
 
-.about-home-right p {
+.about-home-left p {
   color: var(--ash-color);
   font-size: 16px;
 }
 
-.about-home-right button {
+.about-home-left button {
   background-color: var(--main-color);
   outline: none;
   border: none;
@@ -159,7 +258,7 @@
 
 .choose-section {
   padding: 5rem 0;
-  background-color: #f2f2f2;
+  background-color: #FFF9E2;
 }
 
 .choose-left h5 {
@@ -172,7 +271,6 @@
 }
 
 .apeture-wrapper {
-  text-align: center;
   padding: 4rem 0 0 0;
 }
 
@@ -201,74 +299,26 @@
   padding: 5rem 0;
 }
 
-.product-home-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 4rem 0 2rem 0;
-}
-
-.product-home-header p {
-  cursor: pointer;
-}
-
-.product-home-header p:active,
-.product-home-header p:visited {
-  color: var(--main-color);
-}
-
-.product-home-list {
-  display: flex;
-  overflow-x: scroll;
-  white-space: nowrap;
-}
-
-.product-home-list::-webkit-scrollbar {
-  height: 4px;
-}
-
-.product-home-list::-webkit-scrollbar-thumb {
-  background-color: transparent;
-  border-radius: 5px;
-}
-
-.product-home-list::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-.product-home-button {
-  text-align: center;
-  padding: 4rem 0 0 0;
-}
-
-.product-home-button button {
-  background-color: transparent;
-  outline: none;
-  border: 1px solid var(--main-color);
-  border-radius: 0.2rem;
-  color: var(--main-color);
-  padding: 0.5rem 3rem;
-  margin-left: 2rem;
-}
-
 .testimonial-section {
-  padding: 5rem 0;
-  background-color: #071529;
+  padding: 8rem 0 5rem 0;
+  margin: 5rem 0 0 0;
+  background-color: #212121;
 }
 
 .partners-section {
   padding: 5rem 0;
 }
 
-.partner-home-left h5 {
+.partner-home-right h5 {
   color: var(--main-color);
 }
 
-.partner-home-left p {
+.partner-home-right p {
   color: var(--ash-color);
   width: 90%;
 }
 
-.partner-home-left button {
+.partner-home-right button {
   background-color: var(--main-color);
   outline: none;
   border: none;
@@ -278,25 +328,39 @@
   margin: 1.5rem 0 0 0;
 }
 
-.partner-home-right {
+.partner-home-left {
   position: relative;
   text-align: center;
 }
 
-.partner-home-img-bg {
+.partner-home-img-top-bg {
   position: absolute;
   width: 350px;
-  height: 350px;
-  top: 0;
-  right: 0;
-  background: var(--main-color);
+  height: 300px;
+  top: -2rem;
+  right: 8rem;
+  border: 2px solid var(--main-color);
+  border-radius: 4px;
 }
 
-.partner-home-right img {
+.partner-home-img-bottom-bg {
   position: absolute;
   width: 350px;
-  top: 2.5rem;
-  right: 3rem;
+  height: 300px;
+  bottom: -6rem;
+  left: .5rem;
+  border: 2px solid var(--main-color);
+  border-radius: 4px;
+}
+
+.partner-home-left img {
+  position: absolute;
+  width: 350px;
+  left: 3rem;
+}
+
+.blogs-home-section {
+  padding: 5rem 0;
 }
 
 .blogs {
@@ -309,6 +373,11 @@
 .partnerSection {
   padding: 4rem 8rem;
 }
+
+.testimony-section {
+  color: #212121;
+}
+
 
 @media screen and (max-width: 1024px) {
   .products {
@@ -333,7 +402,7 @@
   }
 
   .testimonial-home-header {
-   margin: 0 7rem;
+    margin: 0 7rem;
   }
   .partner-home-img-bg {
     display: none;
