--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -8,6 +8,7 @@ nav {
   transition: var(--transition);
   display: flex;
   justify-content: space-around;
+  font-family: var(--font-montserrat);
 }
 
 .links.scroll a.active, nav a.active {
@@ -19,7 +20,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   position: relative;
-  padding: 1.5rem 0 2rem 0;
+  padding: .8rem 0 2rem 0;
 }
 
 .links {
@@ -28,25 +29,29 @@ nav {
   align-items: center;
   margin-top: 1rem;
   transition: var(--transition);
-  padding: 0 8rem;
+  padding: 0 4rem;
 }
 
 .links.scroll a {
-  padding: 3px 15px;
+  padding: 5px 1rem;
   color: var(--black-color);
 }
 
 .links a {
   font-size: 14px;
-  padding: 30px 15px;
+  padding: 30px 1rem;
   color: var(--white-color);
   text-decoration: none;
   transition: var(--transition);
 }
 
-.links a:hover {
+.links a:hover, .links img:hover {
   color: var(--main-color);
   transition: var(--transition);
+}
+
+.links img {
+  padding: 0 0 0 .2rem;
 }
 
 .contact-btn button {
@@ -55,7 +60,7 @@ nav {
   border: none;
   border-radius: 0.2rem;
   color: var(--white-color);
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 1rem;
 }
 
 .nav-bars {
@@ -66,6 +71,43 @@ nav {
   background-color: transparent;
   outline: none;
   border: none;
+}
+
+.service-nav-section{
+  position: absolute;
+  background: var(--white-color);
+  display: flex;
+  padding: 1rem 1rem;
+  border-radius: .2rem;
+  top: 5rem;
+}
+
+.service-nav-section.company-s {
+  display: block;
+  right: 35%;
+}
+
+.service-nav-section.partner-s {
+  display: block;
+  right: 18%;
+}
+
+.service-nav-section a, .service-nav-section.scroll a{
+  padding: 3px 1rem;
+  color: var(--black-color);
+}
+
+.service-a {
+  position: relative;
+}
+
+.sv-nav-item {
+  display: flex;
+  align-items: center;
+}
+
+.sv-nav-item img {
+  margin: -.8rem .5rem 0 0;
 }
 
 @media screen and (max-width: 1024px) {
