--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -329,7 +329,7 @@
 }
 
 .testimonial-section {
-  padding: 8rem 0 5rem 0;
+  padding: 4rem 0;
   margin: 5rem 0 0 0;
   background-color: #212121;
   font-family: var(--font-montserrat);
