--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -9,6 +9,17 @@ a,
 li {
   font-size: 14px;
   padding: 0.2rem 0;
+  color: var(--white-color);
+}
+
+.top-footer a{
+  color: var(--white-color);
+  text-decoration: none;
+  line-height: 1.8rem;
+}
+
+.top-footer a:hover{
+  color: var(--white-color);
 }
 
 .top-footer {
