--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&family=Source+Sans+Pro&display=swap');
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+}
