--- a/src/index.css
+++ b/src/index.css
@@ -32,10 +32,16 @@ a {
 a:hover {
   color: var(--main-color);
 }
+
 li {
   list-style: none;
 }
 
-h3 {
-  font-weight: 600;
+p {
+  line-height: 1.8rem;
+  font-size: 14px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 800;
 }
