--- a/src/pages/services/StartUp.css
+++ b/src/pages/services/StartUp.css
@@ -89,7 +89,7 @@
   font-family: var(--font-montserrat);
   background: var(--card-bg);
   color: var(--white-color);
-}x
+}
 
 .serv-sec-3 h3 {
   width: 40%;
