--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,13 @@
   --card-bg: #09244B;
   --white-color: #ffffff;
   --black-color: #222222;
+
+  /* courierx colors */
+  --cx-main-color: #54BD95;
+  --cx-black-color: #222222;
+  --cx-light-color: rgba(45, 88, 72, 0.5);
+  --cx-on-black-color: rgba(0, 0, 0, .5);
+
   --transition: all 400ms ease-in-out;
   --font-montserrat: 'Montserrat', sans-serif;
 }
