--- a/src/pages/products/product.css
+++ b/src/pages/products/product.css
@@ -19,22 +19,10 @@
   padding: 1.5rem 0;
 }
 
-.cx-hero-l button,
-.plart-b-left button {
-  background-color: var(--cx-main-color);
-  color: var(--white-color);
-  border: none;
-  outline: none;
-  padding: 0.6rem 1.5rem;
+.cx-hero-btns Button {
   margin: 0 1rem 0 0;
-  border-radius: 4px;
 }
 
-.cx-hero-l button:nth-child(2) {
-  background-color: transparent;
-  color: var(--cx-main-color);
-  border: 1px solid var(--cx-main-color);
-}
 
 .plart-sec {
   padding: 3rem 0;
@@ -190,7 +178,6 @@
 }
 
 .cx-collab {
-  background: var(--cx-main-color);
   color: var(--white-color);
   display: flex;
   align-items: center;
@@ -219,17 +206,6 @@
   font-size: 14px;
 }
 
-.cx-collab-btns button:nth-child(1) {
-  background: var(--white-color);
-  color: var(--cx-main-color);
-  margin: 0 1rem 0 0;
-}
-
-.cx-collab-btns button:nth-child(2) {
-  border: 1px solid var(--white-color);
-  margin: 0 0 0 1rem;
-}
-
 .cx-competition-sec {
   padding: 3rem 0;
   font-family: var(--font-montserrat);
@@ -253,7 +229,7 @@
 }
 
 .cx-sol-left {
-  flex: 1;
+  flex: .5;
   color: var(--white-color);
 }
 
@@ -266,13 +242,13 @@
 
 .cx-l-card-item {
   background: #2c2b2b;
-  margin: 1rem 0;
+  margin: 1.2rem 0;
   border-radius: 4px;
   cursor: pointer;
   transition: var(--transition);
   display: flex;
   align-items: center;
-  padding: 0.8rem 3rem;
+  padding: 1rem 2rem;
 }
 
 .cx-l-card-item img {
@@ -296,13 +272,76 @@
   transition: var(--transition);
 }
 
+
+/* food x colors */
+.cx-solution-sec.fx {
+  background: #111827;
+  padding: 3rem 0;
+  color: white;
+}
+
+.plart-b {
+  padding: 1rem 0 0 0;
+}
+
+.plart-b-right img{
+  width: 110%;
+ margin: -2rem 0 0 0;
+}
+
+
+.cx-l-card-item.fx {
+  background: #bbbbbb23;
+}
+
+.cx-l-card-item.active.fx {
+  border: 1px solid var(--fx-main-color);
+  background: var(--fx-light-color);
+}
+
+.cx-l-card-item.active.fx p {
+  color: var(--fx-main-color);
+}
+/* food x colors */
+
+
+
+
+/* med x colors */
+.cx-solution-sec.mx {
+  background: #111827;
+  padding: 3rem 0;
+  color: white;
+}
+
+
+.cx-l-card-item.mx {
+  background: #3e83ea13;
+}
+
+.cx-l-card-item.active.mx {
+  border: 1px solid var(--mx-main-color);
+  background: var(--mx-light-color);
+}
+
+.cx-l-card-item.active.mx p {
+  color: var(--mx-main-color);
+}
+/* medx x colors */
+
+
+
 .cx-sol-right {
   flex: 1;
   color: white;
   padding: 6.5rem 0 0 0;
 }
 
-.cx-sol-right h3 {
+.cx-sol-right img {
+  width: 7%;
+}
+
+.cx-sol-right h4 {
   padding: 1rem 0 0 0;
 }
 
