add hotel and restaurant pages

--- a/src/pages/products/product.css
+++ b/src/pages/products/product.css
@@ -158,7 +158,12 @@
   background: transparent;
 }
 
-.feature h6 {
+.feature.ex h6 {
+  color: var(--black-color);
+  padding: 1rem 0 0 0;
+}
+
+.feature.p h6 {
   color: var(--white-color);
   padding: 1rem 0 0 0;
 }
